--- a/app/globals.css
+++ b/app/globals.css
@@ -34,85 +34,53 @@ html {
 }
 
 body {
-	font-family: monospace;
+	font-family: var(--font-fragment-mono), monospace;
 	color: rgb(var(--foreground-rgb));
 	background: rgb(var(--background-rgb));
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
+	line-height: 1.8;
+}
+
+header {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #414141;
+	height: 4rem;
+	padding: 1rem;
 }
 
 h1 {
-	color: #f5f5f5;
-	font-size: 2rem;
-	text-transform: uppercase;
-	letter-spacing: -0.01rem;
-	width: 100%;
+	font-size: 1.5rem;
 }
 
 h2 {
-	color: #f5f5f5;
-	/* color: #e5e5e5; */
-	scroll-margin-top: 8rem;
 	font-size: 1rem;
-	letter-spacing: 0.05rem;
-	margin-top: 4rem;
 }
 
-h3 {
-	color: #e5e5e5;
-	/* color: #a3a3a3; */
-	scroll-margin-top: 8rem;
-	letter-spacing: 0.05rem;
-	margin-top: 4rem;
-}
-
+h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	line-height: 1.8;
+	color: #f5f5f5;
+	letter-spacing: 0.2rem;
 	width: 100%;
 }
 
-h2 + h3 {
-	margin-top: 2rem;
-}
-
-a {
-	text-transform: uppercase;
-	font-family: var(--font-pantasia);
-}
-
-li > a {
-	text-transform: uppercase;
-	font-family: var(--font-pantasia);
-	letter-spacing: 0.025rem;
-}
-
-ol,
-ul {
-	width: 100%;
-}
-
+a,
 p,
 li {
-	line-height: 1.8;
-}
-
-caption {
 	font-size: 0.75rem;
-	color: #737373;
+	color: #aaa;
 }
 
 footer {
-	margin-top: 4rem;
-}
-
-footer a {
-	font-size: 0.75rem;
-	letter-spacing: 0.025rem;
+	padding: 1.25rem 1rem 1.5rem 1rem;
 }
 
 @layer utilities {
@@ -136,16 +104,9 @@ footer a {
 	border-radius: 1px;
 }
 
-.activeLink::before {
-	content: "→";
-	position: absolute;
-	left: -1rem;
-}
-
 .name {
 	font-family: var(--font-pantasia);
 	font-size: 2rem;
-	text-transform: uppercase;
 	letter-spacing: -0.01rem;
 }
 
