--- a/app/globals.css
+++ b/app/globals.css
@@ -42,15 +42,11 @@ body {
 	padding: 0;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
-	line-height: 1.8;
+	line-height: 1.2;
 }
 
 header {
-	display: flex;
-	align-items: center;
-	border-bottom: 1px solid #414141;
-	height: 4rem;
-	padding: 1rem;
+	@apply flex items-center border-b border-border-default h-16 p-4;
 }
 
 h1 {
@@ -70,6 +66,7 @@ h6 {
 	color: #f5f5f5;
 	letter-spacing: 0.2rem;
 	width: 100%;
+	line-height: 1.8;
 }
 
 a,
